logs/dag_id=my_second_dagV5/run_id=manual__2023-01-31T09:06:25.714411+00:00/task_id=insert_task/attempt=2.log
[2023-01-31T09:07:40.541+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: my_second_dagV5.insert_task manual__2023-01-31T09:06:25.714411+00:00 [queued]>
[2023-01-31T09:07:40.552+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: my_second_dagV5.insert_task manual__2023-01-31T09:06:25.714411+00:00 [queued]>
[2023-01-31T09:07:40.552+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-01-31T09:07:40.552+0000] {taskinstance.py:1280} INFO - Starting attempt 2 of 2
[2023-01-31T09:07:40.553+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-01-31T09:07:40.569+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): insert_task> on 2023-01-31 09:06:25.714411+00:00
[2023-01-31T09:07:40.573+0000] {standard_task_runner.py:55} INFO - Started process 1104 to run task
[2023-01-31T09:07:40.575+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'my_second_dagV5', 'insert_task', 'manual__2023-01-31T09:06:25.714411+00:00', '--job-id', '17', '--raw', '--subdir', 'DAGS_FOLDER/dag2.py', '--cfg-path', '/tmp/tmpb2hifu7x']
[2023-01-31T09:07:40.577+0000] {standard_task_runner.py:83} INFO - Job 17: Subtask insert_task
[2023-01-31T09:07:40.669+0000] {task_command.py:388} INFO - Running <TaskInstance: my_second_dagV5.insert_task manual__2023-01-31T09:06:25.714411+00:00 [running]> on host ab5131891604
[2023-01-31T09:07:40.785+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=my_second_dagV5
AIRFLOW_CTX_TASK_ID=insert_task
AIRFLOW_CTX_EXECUTION_DATE=2023-01-31T09:06:25.714411+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-01-31T09:06:25.714411+00:00
[2023-01-31T09:07:40.785+0000] {sql.py:254} INFO - Executing: 
            insert into dag_runs(dt, dag_id) VALUES (%(ds)s, dag is dag not a dag22)
        
[2023-01-31T09:07:40.795+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-01-31T09:07:40.996+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-01-31T09:07:40.999+0000] {sql.py:375} INFO - Running statement: 
            insert into dag_runs(dt, dag_id) VALUES (%(ds)s, dag is dag not a dag22)
        , parameters: {'ds': datetime.datetime(2022, 2, 16, 0, 0)}
[2023-01-31T09:07:41.000+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 378, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "dag"
LINE 2: ... VALUES ('2022-02-16T00:00:00'::timestamp, dag is dag not a ...
                                                             ^

[2023-01-31T09:07:41.009+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=my_second_dagV5, task_id=insert_task, execution_date=20230131T090625, start_date=20230131T090740, end_date=20230131T090741
[2023-01-31T09:07:41.026+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 17 for task insert_task (syntax error at or near "dag"
LINE 2: ... VALUES ('2022-02-16T00:00:00'::timestamp, dag is dag not a ...
                                                             ^
; 1104)
[2023-01-31T09:07:41.072+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-01-31T09:07:41.125+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
